New layout, added top up page
I added top up page (copied the career page)
Created a new layout div .layout
only using h1, h2, h3, p and img
CSS is messy now, I will delete

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -39,62 +39,56 @@
     </section>
     <!-- introduction -->
     <section id="introduction" class="introduction hide">
-        <div class="intro-container">
-            <div class="img-header img-intro">
-                <p class="title-section">
-                    MULTIMEDIA DESIGN
-                    <br>AND COMMUNICATION</p>
-            </div>
-            <h2 class="sub-section">What is MMD?</h2>
+        <div class="layout">
+            <h1>Multimedia Design and Communication</h1>
+            <h2>What is MMD?</h2>
 
             <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business. You learn to work with frontend development, User Interface Design (UI), User Experience Design (UX) and you understanding the business context.</p>
 
             <p>During your studies you are in close contact with businesses when creating projects and writing papers in cooperation with a specific company or organisation. During the studies you will have an internship period at a company in order to mobilise your competencies in practice. We cooperate with a wide range of business types including agencies, companies, and cultural organisations.</p>
+
         </div>
     </section>
 
     <!-- study program -->
     <section id="program" class="study-program hide">
-        <div class="study-container">
-            <div class="img-header img-program">
-                <p class="title-section">
-                    STUDY PROGRAM
-                </p>
-            </div>
-            <h2 class="sub-section">
-                Core Areas
-            </h2>
-            <div class="study-content">
-                The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.
-            </div>
-            <div class="cores">
-                <img src="img/cores/business-core.svg">
-                <img src="img/cores/interaction-development-core.svg">
-                <img src="img/cores/design-core.svg">
-                <img src="img/cores/communication-core.svg">
-            </div>
-            <h2 class="sub-section">
-                Program Structure
-            </h2>
-            <div class="study-content">
+        <div class="layout">
+            <h1>Study Program</h1>
+
+            <h2>Core Areas</h2>
+
+            <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.</p>
+
+            <img src="img/cores/business-core.svg">
+            <img src="img/cores/interaction-development-core.svg">
+            <img src="img/cores/design-core.svg">
+            <img src="img/cores/communication-core.svg">
+
+            <h2>Program Structure</h2>
+            <p>
                 The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.
-            </div>
+            </p>
             <div class="time">
                 2 years / 4 semesters / 120 ECTS
             </div>
             <div class="table">
+
                 <div class="year">
                     First Year
                 </div>
+
                 <div class="semester">
                     1st Semester
                 </div>
+
                 <div class="semester">
                     2nd Semester
                 </div>
+
                 <div id="mmd1-btn" class="project">
                     Multimedia Production 1
                 </div>
+
                 <div id="mmd2-btn" class="project">
                     Multimedia Production 2
                 </div>
@@ -102,24 +96,31 @@
                 <div class="year">
                     Second Year
                 </div>
+
                 <div class="semester">
                     3rd Semester
                 </div>
+
                 <div class="semester">
                     4th Semester
                 </div>
+
                 <div id="mmd3-btn" class="project">
                     Multimedia Production 3
                 </div>
+
                 <div id="intern-btn" class="project">
                     Internship
                 </div>
+
                 <div id="elect-btn" class="project">
                     Electives
                 </div>
+
                 <div id="final-btn" class="project">
                     Final Exam
                 </div>
+
             </div>
         </div>
     </section>
@@ -250,20 +251,16 @@
 
     <!-- admission -->
     <section id="admission" class="admission hide">
-        <div class="admission-container">
-            <div class="img-header img-admission">
-                <p class="title-section">
-                    ADMISSION
-                </p>
-            </div>
-            <h2 class="sub-section">How do I apply?</h2>
-            <div class="admission-desc">
-                <p>An education equivalent to a Danish upper secondary education or relevant vocational education is required (English B and Math C must be included).</p>
+        <div class="layout">
+            <h1>Admission</h1>
+            <h2>How do I apply?</h2>
 
-                <p>Mathematics C-level is required in order to apply for the AP Degree in Multimedia Design and Communication. The Mathematics C-level is represented by 125 hours during the last three years of upper-secondary school (equivalent to the Danish C-level of a Danish upper-secondary examination</p>
+            <p>An education equivalent to a Danish upper secondary education or relevant vocational education is required (English B and Math C must be included).</p>
 
-                <p>The programme is connected to the Coordinated Enrolment System (KOT). You can be enrolled either in Quota 1 or Quota 2.</p>
-            </div>
+            <p>Mathematics C-level is required in order to apply for the AP Degree in Multimedia Design and Communication. The Mathematics C-level is represented by 125 hours during the last three years of upper-secondary school (equivalent to the Danish C-level of a Danish upper-secondary examination</p>
+
+            <p>The programme is connected to the Coordinated Enrolment System (KOT). You can be enrolled either in Quota 1 or Quota 2.</p>
+
             <div class="adm-container">
                 <div class="adm-first-col">
                     <h5 class="adm-elem1">Admission Requirements Quota 1</h5>
@@ -333,13 +330,10 @@
 
     <!-- study abroad -->
     <section id="abroad" class="study-abroad hide">
-        <div class="abroad-container">
-            <div class="img-header img-abroad">
-                <p class="title-section">
-                    STUDY ABROAD
-                </p>
-            </div>
-            <h2 class="sub-section">Explore the World</h2>
+        <div class="layout">
+            <h1>Study Abroad</h1>
+
+            <h2>Explore the World</h2>
 
             <p>KEA has formed partnership agreements with a large number of educational institutions in Europe and overseas. The European institutions are all certified under the ERASMUS charter and are available for study exchange for KEA's students.</p>
 
@@ -347,12 +341,10 @@
 
             <p>According to the 7-point grading scale at the institution where the exam has been taken and is equivalent to a programme element in this curriculum, the grade may be transferred.</p>
 
-            <div class="images-container">
-                <div class="img1"></div>
-                <div class="img2"></div>
-                <div class="img3"></div>
-                <div class="img4"></div>
-            </div>
+            <img src="img/Griffith.png">
+            <img src="img/korea.png">
+            <img src="img/napier.png">
+            <img src="img/lisbon.png">
 
             <p>Here are a list of just some of the fantastic institutions available for Multimedia Design + Communication. </p>
 
@@ -388,105 +380,109 @@
     </section>
     <!-- student life -->
     <section id="student" class="student-life hide">
-        <div class="student-container">
-            <div class="img-header img-life">
-                <p class="title-section">STUDENT LIFE </p>
-            </div>
-            <h2 class="sub-section"> Study Form</h2>
+        <div class="layout">
+            <h1>Life at MDD</h1>
+
+            <h2>Study Form</h2>
             <p>The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.</p>
 
             <p>The project tasks and the final project in particular, are independent tasks that you carry out on the basis of the theory that you have learned. The projects should be based on specific cases from businesses as far as this is possible. You will be given good advice and constructive criticism along the way.</p>
 
-            <p>You must be prepared to make an independent effort and cooperate with your fellow students. The type of instruction gives you experience that you can use for solving both known and new issues. </p>
+            <p>You must be prepared to make an independent effort and cooperate with your fellow students. The type of instruction gives you experience that you can use for solving both known and new issues.</p>
 
-            <h2 class="sub-section">KEA Cafe + Moon Bar</h2>
+            <h2>KEA Cafe + Moon Bar</h2>
 
-            <p>Friday bar 14.00-22.00
-                <br>Discounted drinks + endless beer pong + foosball</p>
+            <h3>Friday bar 14.00-22.00</h3>
+            <p>Discounted drinks + endless beer pong + foosball</p>
 
-            <p>Hey! Cafe
-                <br>Join us every Tuesday and Thursday: Studiehuset, Guldbergsgade 29N, 2200 Copenhagen N</p>
-            <div class="instagram">
-                <img src="img/rooftop.jpg" alt="rooftop">
-                <img src="img/present.jpg" alt="presentation">
-                <img src="img/car.jpg" alt="car">
-                <img src="img/bar.jpg" alt="bar">
-            </div>
-            <!--- new photos --->
+            <h3>Hey! Cafe</h3>
+            <p>Join us every Tuesday and Thursday: Studiehuset, Guldbergsgade 29N, 2200 Copenhagen N</p>
+
+            <img src="img/rooftop.jpg" alt="rooftop">
+            <img src="img/present.jpg" alt="presentation">
+            <img src="img/car.jpg" alt="car">
+            <img src="img/bar.jpg" alt="bar">
+
         </div>
     </section>
-    <!-- career -->
-    <section id="career" class="career hide">
+    <!--- new photos --->
 
-        <div class="title-career-container">
-            <div>
-                <p class="title-career">
-                    GRADUATION +
-                    <br>FUTURE CAREER </p>
-            </div>
 
-            <div class="img-career"></div>
-        </div>
+    <!-- top up -->
+    <section id="top" class="top hide">
 
-        <div class="career-container">
-            <h2 class="sub-section"> Top-up Your Education</h2>
-            <p>With a Multimedia Design + Communication education you can participate in a higher education programme. You can continue at KEA - Copenhagen School of Design and Technology and choose between: </p>
+        <div class="layout">
+            <h1>Top Up</h1>
+
+            <h2> Top-up Your Education</h2>
+            <p>With a Multimedia Design + Communication education you can participate in a higher education programme. You can continue at KEA - Copenhagen School of Design and Technology and choose between:</p>
 
             <p>BA in Web development (1 ½ year)
                 <br>BA in Design + Business (1 ½ year)
             </p>
 
-            <h2 class="sub-section">From KEA + Beyond</h2>
+            <h2>From KEA + Beyond</h2>
 
             <p>As an educated multimedia designer you will typically be able to work with designing, planning and managing multimedia tasks. You will also be able to contribute to the implementation, administration and maintenance of multimedia productions.</p>
 
         </div>
     </section>
+
+    <!-- career -->
+    <section id="career" class="career hide">
+        <div class="layout">
+            <h1>Career</h1>
+
+            <h2>Prospects</h2>
+            <p>With a Multimedia Design + Communication education you can participate in a higher education programme. You can continue at KEA - Copenhagen School of Design and Technology and choose between: </p>
+
+            <p>BA in Web development (1 ½ year)
+                <br>BA in Design + Business (1 ½ year)</p>
+
+            <h2>From KEA + Beyond</h2>
+
+            <p>As an educated multimedia designer you will typically be able to work with designing, planning and managing multimedia tasks. You will also be able to contribute to the implementation, administration and maintenance of multimedia productions.</p>
+
+        </div>
+    </section>
+
     <!-- contact -->
     <section id="contact" class="contact hide">
-        <div class="contact-container">
-            <div class="img-header img-contact">
-                <p class="title-section">CONTACT</p>
-            </div>
-            <h2 class="sub-section">Need to know more?</h2>
-            <p class="contact-desc">
-                <br>You are more than welcome to come to our <b>OPEN HOUSE</b> which will happen on 28 Febuary 12 p.m - 6 p.m.
-                <br><a href="http://keaconnect.dk/en/">Click here</a> for more information.
-            </p>
-            <div class="contact-table">
-                <div class="email">
-                    E-mail:
-                    <input type="email" />
-                    <p><textarea name="comments" cols="50" rows="10">Leave a message
-            </textarea></p>
-                    <input type="submit" />
-                    <div class="icons">
-                        <img src="img/black-white-social-media.png">
-                    </div>
-                </div>
-                <div class="advisor">
-                    <p><b>Study and Career Advisor</b>
-                        <br>Berit Bergman
-                        <br>E-mail: berb@kea.dk
-                        <br>Telephone: 46 46 03 28
-                        <br>Telephone hours: Monday-Wednesday + Friday 9-11
-                    </p>
+        <div class="layout">
+            <h1>Contact</h1>
 
-                    <div class="contact-info">
-                        <p> <b>Address</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lygten 16, 2400 Copenhagen NV
-                        </p>
-                        <p>
-                            <b>Phone number:</b>&nbsp;&nbsp;&nbsp;&nbsp; +45 46 46 04 00
-                        </p>
-                        <p>
-                            <b>E-mail:</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; kea@kea.dk
-                        </p>
-                    </div>
-                </div>
+            <h2>Need to know more?</h2>
+            <p>You are more than welcome to come to our <b>OPEN HOUSE</b> which will happen on 28 Febuary 12 p.m - 6 p.m.<a href="http://keaconnect.dk/en/">Click here</a> for more information.</p>
+
+            <div class="email">
+                E-mail:
+                <input type="email" />
+                <p><textarea name="comments" cols="50" rows="10">Message
+            </textarea></p>
+                <input type="submit" />
+            </div>
+
+            <div class="contact-table">
+                <p>
+                    <b>Study and Career Advisor</b>
+                    <br>Berit Bergman
+                    <br>E-mail: berb@kea.dk
+                    <br>Telephone: 46 46 03 28
+                    <br>Telephone hours: Monday-Wednesday + Friday 9-11
+                </p>
+
+                <p><b>Multimedia Campus Lygten 16</b>
+                    <br>Address: Lygten 16, 2400 Copenhagen NV
+                    <br>Phone number: +45 46 46 04 00
+                    <br>E-mail: kea@kea.dk</p>
             </div>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <div class="icons">
+            <img src="img/black-white-social-media.png">
+        </div>
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
