Layout is finished
.layout has been applied to all
CSS is cleaned up
Added Emily styling (fonts) + a little more
Added latest GIF for front-page
Images are centered
READY FOR RESPONSIVE

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-   <!-- <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <title>Multimedia designer</title>
 </head>
@@ -31,12 +32,7 @@
     <!-- front -->
     <section id="front" class="front">
         <div class="front-square">
-        <img src="img/intro_2.gif" alt="gif">
-            <p class="title">
-                <br>MULTIMEDIA
-                <br>DESIGN +
-                <br>COMMUNICATION
-            </p>
+            <img src="img/intro.gif" alt="gif">
         </div>
     </section>
     <!-- introduction -->
@@ -60,12 +56,12 @@
             <h2>Core Areas</h2>
 
             <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.</p>
-
-            <img src="img/cores/business-core.svg">
-            <img src="img/cores/interaction-development-core.svg">
-            <img src="img/cores/design-core.svg">
-            <img src="img/cores/communication-core.svg">
-
+            <div class="center-img">
+                <img class="circle" src="img/cores/business-core.svg">
+                <img class="circle" src="img/cores/interaction-development-core.svg">
+                <img class="circle" src="img/cores/design-core.svg">
+                <img class="circle" src="img/cores/communication-core.svg">
+            </div>
             <h2>Program Structure</h2>
             <p>
                 The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.
@@ -342,12 +338,12 @@
             <p> Having passed the first-year exam, students can choose to complete either the entire programme or parts of it abroad. KEA offers multiple possibilities for international study, including the fourth semester internship.</p>
 
             <p>According to the 7-point grading scale at the institution where the exam has been taken and is equivalent to a programme element in this curriculum, the grade may be transferred.</p>
-
-            <img src="img/Griffith.png">
-            <img src="img/korea.png">
-            <img src="img/napier.png">
-            <img src="img/lisbon.png">
-
+            <div class="center-img">
+                <img class="study-abroad-img" src="img/Griffith.png">
+                <img class="study-abroad-img" src="img/korea.png">
+                <img class="study-abroad-img" src="img/napier.png">
+                <img class="study-abroad-img" src="img/lisbon.png">
+            </div>
             <p>Here are a list of just some of the fantastic institutions available for Multimedia Design + Communication. </p>
 
             <div class="country-container">
@@ -399,12 +395,12 @@
 
             <h3>Hey! Cafe</h3>
             <p>Join us every Tuesday and Thursday: Studiehuset, Guldbergsgade 29N, 2200 Copenhagen N</p>
-
-            <img src="img/rooftop.jpg" alt="rooftop">
-            <img src="img/present.jpg" alt="presentation">
-            <img src="img/car.jpg" alt="car">
-            <img src="img/bar.jpg" alt="bar">
-
+            <div class="center-img">
+                <img class="student-life-img" src="img/rooftop.jpg" alt="rooftop">
+                <img class="student-life-img" src="img/present.jpg" alt="presentation">
+                <img class="student-life-img" src="img/car.jpg" alt="car">
+                <img class="student-life-img" src="img/bar.jpg" alt="bar">
+            </div>
         </div>
     </section>
     <!--- new photos --->
@@ -470,10 +466,10 @@
                     <br>Berit Bergman
                     <br>E-mail: berb@kea.dk
                     <br>Telephone: 46 46 03 28
-                    <br>Telephone hours: Monday-Wednesday + Friday 9-11
+                    <br>Telephone hours: Mon-Wed + Fri 9-11
                 </p>
 
-                <p><b>Multimedia Campus Lygten 16</b>
+                <p><b>MMD Campus Lygten 16</b>
                     <br>Address: Lygten 16, 2400 Copenhagen NV
                     <br>Phone number: +45 46 46 04 00
                     <br>E-mail: kea@kea.dk</p>
