--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
 
 <body>
     <div class="logo-front">
-
     </div>
-    <nav>
+    <div class="search">
+        <input type="search" /></div>
+    <img class="search-nav" src="img/buttons/search-icon.svg">
+    <p class="language">DA/EN</p>
+
+    <!--<label for="toggle">&#9776;</label>
+    <input type="checkbox" id="toggle">-->
+
+    <nav class="local-nav">
         <a href="#" class="nav-title">MMD</a>
         <a href="#" id="intro-nav">Introduction</a>
         <a href="#" id="program-nav">Study Program</a>
@@ -32,7 +39,7 @@
     <!-- front -->
     <section id="front" class="front">
         <div class="front-square">
-            <img src="img/intro.gif" alt="gif">
+            <!---<img src="img/intro.gif" alt="gif">-->
         </div>
     </section>
     <!-- introduction -->
@@ -450,7 +457,7 @@
             <h1>Contact</h1>
 
             <h2>Need to know more?</h2>
-            <p>You are more than welcome to come to our <b>OPEN HOUSE</b> which will happen on 28 Febuary 12 p.m - 6 p.m.<a href="http://keaconnect.dk/en/">Click here</a> for more information.</p>
+            <p>You are more than welcome to come to our <b>OPEN HOUSE</b> which will happen on 28 Febuary 12 p.m - 6 p.m.<a href="http://keaconnect.dk/en/"> Click here</a> for more information.</p>
 
             <div class="email">
                 E-mail:
