--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <img class="search-nav" src="img/buttons/search-icon.svg">
     <p class="language">DA/EN</p>
 
-    <!--<label for="toggle">&#9776;</label>
-    <input type="checkbox" id="toggle">-->
+    <label for="toggle">&#9776;</label>
+    <input type="checkbox" id="toggle">
 
     <nav class="local-nav">
         <a href="#" class="nav-title">MMD</a>
