Pull from master DONE
Got Weronikas modals in my code and working :)

--- a/index.html
+++ b/index.html
@@ -57,97 +57,80 @@
 
     <!-- study program -->
     <section id="program" class="study-program hide">
+        <div class="cores">
 
-        <div class="study-container">
-            <div class="img-header img-program">
-                <p class="title-section">
-                    STUDY PROGRAM
+            <div class="layout">
+                <h1>Study Program</h1>
+
+                <h2>Core Areas</h2>
+
+                <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.</p>
+                <div class="center-img">
+                    <img class="circle" id="business-btn" src="img/cores/business-core.svg">
+                    <img class="circle" id="comm-btn" src="img/cores/communication-core.svg">
+                    <img class="circle" id="design-btn" src="img/cores/design-core.svg">
+                    <img class="circle" id="dev-btn" src="img/cores/interaction-development-core.svg">
+
+                </div>
+                <h2>Program Structure</h2>
+                <p>
+                    The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.
                 </p>
+                <div class="time">
+                    2 years / 4 semesters / 120 ECTS
+                </div>
+                <div class="table">
+
+                    <div class="year">
+                        First Year
+                    </div>
+
+                    <div class="semester">
+                        1st Semester
+                    </div>
+
+                    <div class="semester">
+                        2nd Semester
+                    </div>
+
+                    <div id="mmd1-btn" class="project">
+                        Multimedia Production 1
+                    </div>
+
+                    <div id="mmd2-btn" class="project">
+                        Multimedia Production 2
+                    </div>
+
+                    <div class="year">
+                        Second Year
+                    </div>
+
+                    <div class="semester">
+                        3rd Semester
+                    </div>
+
+                    <div class="semester">
+                        4th Semester
+                    </div>
+
+                    <div id="mmd3-btn" class="project">
+                        Multimedia Production 3
+                    </div>
+
+                    <div id="intern-btn" class="project">
+                        Internship
+                    </div>
+
+                    <div id="elect-btn" class="project">
+                        Electives
+                    </div>
+
+                    <div id="final-btn" class="project">
+                        Final Exam
+                    </div>
+
+                </div>
             </div>
-            <h2 class="sub-section">
-                Core Areas
-            </h2>
-            <div class="study-content">
-                The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.
-            </div>
-            <div class="cores">
-                <img id="business-btn" src="img/cores/business-core.svg">
-                <img id="comm-btn" src="img/cores/communication-core.svg">
-                <img id="design-btn" src="img/cores/design-core.svg">
-                <img id="dev-btn" src="img/cores/interaction-development-core.svg">
-
-        <div class="layout">
-            <h1>Study Program</h1>
-
-            <h2>Core Areas</h2>
-
-            <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.</p>
-            <div class="center-img">
-                <img class="circle" src="img/cores/business-core.svg">
-                <img class="circle" src="img/cores/interaction-development-core.svg">
-                <img class="circle" src="img/cores/design-core.svg">
-                <img class="circle" src="img/cores/communication-core.svg">
-
-            </div>
-            <h2>Program Structure</h2>
-            <p>
-                The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.
-            </p>
-            <div class="time">
-                2 years / 4 semesters / 120 ECTS
-            </div>
-            <div class="table">
-
-                <div class="year">
-                    First Year
-                </div>
-
-                <div class="semester">
-                    1st Semester
-                </div>
-
-                <div class="semester">
-                    2nd Semester
-                </div>
-
-                <div id="mmd1-btn" class="project">
-                    Multimedia Production 1
-                </div>
-
-                <div id="mmd2-btn" class="project">
-                    Multimedia Production 2
-                </div>
-
-                <div class="year">
-                    Second Year
-                </div>
-
-                <div class="semester">
-                    3rd Semester
-                </div>
-
-                <div class="semester">
-                    4th Semester
-                </div>
-
-                <div id="mmd3-btn" class="project">
-                    Multimedia Production 3
-                </div>
-
-                <div id="intern-btn" class="project">
-                    Internship
-                </div>
-
-                <div id="elect-btn" class="project">
-                    Electives
-                </div>
-
-                <div id="final-btn" class="project">
-                    Final Exam
-                </div>
-
-            </div>
-        </div>
     </section>
 
     <!-- mmd-production 1 -->
@@ -252,7 +235,7 @@
             <span id="close" class="close"></span>
             <p class="description"></p>
             <ul class="knowledge">
-               <span class="cat-title">Knowledge</span>
+                <span class="cat-title">Knowledge</span>
             </ul>
             <ul class="skills">
                 <span class="cat-title">Skills</span>
