--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
     <!-- front -->
     <section id="front" class="front">
         <div class="front-square">
-        <img src="img/intro_2.gif" alt="gif">
-            <p class="title">
-                <br>MULTIMEDIA
-                <br>DESIGN +
-                <br>COMMUNICATION
-            </p>
+        <img src="img/intro.gif"alt="gif">
         </div>
     </section>
     <!-- introduction -->
@@ -434,13 +429,22 @@
             <h2 class="sub-section"> Top-up Your Education</h2>
             <p>With a Multimedia Design + Communication education you can participate in a higher education programme. You can continue at KEA - Copenhagen School of Design and Technology and choose between: </p>
 
-            <p>BA in Web development (1 ½ year)
+             <p>BA in Web development (1 ½ year)
                 <br>BA in Design + Business (1 ½ year)
             </p>
+
+
+            <p>At the top-up programme in Web Development you will learn how to undertake the design and construction of web applications of all sizes. You will be working creatively with coding, creating realistic projects while you improve your development and programming skills to a professional level.</p>
+
+            <p>The top-Up programme in Design + Business is aimed at different markets within the fashion and lifestyle trade. It will focus on Brand design, communication design and media. You learn how to plan, manage and carry out complex, analytical and creative assignments with relevant practice and theory.  </p>
 
             <h2 class="sub-section">From KEA + Beyond</h2>
 
             <p>As an educated multimedia designer you will typically be able to work with designing, planning and managing multimedia tasks. You will also be able to contribute to the implementation, administration and maintenance of multimedia productions.</p>
+
+            <p> Future Job Opportunities include</p>
+
+            <p>Multimedia Designer // Web Designer // Project Manager // Web Developer</p>
 
         </div>
     </section>
