--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="#" id="program-nav">Study Program</a>
         <a href="#" id="student-nav">Student Life</a>
         <a href="#" id="abroad-nav">Study Abroad</a>
-        <a href="#" id="top-nav">Top Up</a>
+        <a href="#" id="top-nav">Further Education</a>
         <a href="#" id="career-nav">Career</a>
         <a href="#" id="adm-nav">Admission</a>
         <a href="#" id="contact-nav">Contact</a>
@@ -39,7 +39,7 @@
     <!-- front -->
     <section id="front" class="front">
         <div class="front-square">
-          
+
             <!---<img src="img/intro.gif" alt="gif">-->
 
         </div>
@@ -53,6 +53,12 @@
             <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business. You learn to work with frontend development, User Interface Design (UI), User Experience Design (UX) and you understanding the business context.</p>
 
             <p>During your studies you are in close contact with businesses when creating projects and writing papers in cooperation with a specific company or organisation. During the studies you will have an internship period at a company in order to mobilise your competencies in practice. We cooperate with a wide range of business types including agencies, companies, and cultural organisations.</p>
+
+            <div class="center-img">
+                <img class="intro-img" src="img/intro_1.jpg">
+                <img class="intro-img" src="img/intro_2.jpg">
+                <img class="intro-img" src="img/intro_3.jpg">
+            </div>
 
         </div>
     </section>
@@ -416,23 +422,14 @@
             <h2> Top-up Your Education</h2>
             <p>With a Multimedia Design + Communication education you can participate in a higher education programme. You can continue at KEA - Copenhagen School of Design and Technology and choose between:</p>
 
-             <p>BA in Web development (1 ½ year)
-                <br>BA in Design + Business (1 ½ year)
-            </p>
+            <ul>
+                <li>- BA in Web development (1 ½ year)</li>
+                <li>- BA in Design + Business (1 ½ year)</li>
+            </ul>
 
             <p>At the top-up programme in Web Development you will learn how to undertake the design and construction of web applications of all sizes. You will be working creatively with coding, creating realistic projects while you improve your development and programming skills to a professional level.</p>
 
-            <p>The top-Up programme in Design + Business is aimed at different markets within the fashion and lifestyle trade. It will focus on Brand design, communication design and media. You learn how to plan, manage and carry out complex, analytical and creative assignments with relevant practice and theory.  </p>
-
-            <h2 class="sub-section">From KEA + Beyond</h2>
-          
-            <h2>From KEA + Beyond</h2>
-
-            <p>As an educated multimedia designer you will typically be able to work with designing, planning and managing multimedia tasks. You will also be able to contribute to the implementation, administration and maintenance of multimedia productions.</p>
-
-            <p>Future Job Opportunities include</p>
-
-            <p>Multimedia Designer // Web Designer // Project Manager // Web Developer</p>
+            <p>The top-Up programme in Design + Business is aimed at different markets within the fashion and lifestyle trade. It will focus on Brand design, communication design and media. You learn how to plan, manage and carry out complex, analytical and creative assignments with relevant practice and theory. </p>
 
         </div>
     </section>
@@ -442,16 +439,23 @@
         <div class="layout">
             <h1>Career</h1>
 
-            <h2>Prospects</h2>
-            <p>With a Multimedia Design + Communication education you can participate in a higher education programme. You can continue at KEA - Copenhagen School of Design and Technology and choose between: </p>
-
-            <p>BA in Web development (1 ½ year)
-                <br>BA in Design + Business (1 ½ year)</p>
-
-            <h2>From KEA + Beyond</h2>
+            <h2>From KEA and Beyond</h2>
 
             <p>As an educated multimedia designer you will typically be able to work with designing, planning and managing multimedia tasks. You will also be able to contribute to the implementation, administration and maintenance of multimedia productions.</p>
 
+            <p>Future job opportunities include:</p>
+
+            <ul>
+                <li>- Multimedia Designer</li>
+                <li>- Web Designer</li>
+                <li>- Project Manager</li>
+                <li>- Web Developer</li>
+            </ul>
+            <aside>
+                <div class="center-img">
+                    <img class="intro-img" src="img/balloon.png">
+                </div>
+            </aside>
         </div>
     </section>
 
