--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <!-- front -->
     <section id="front" class="front">
         <div class="front-square">
-
-            <!---<img src="img/intro.gif" alt="gif">-->
-
+            <div class="layout">
+                <h1 class="big-title">Design. Create. Develop. Multimedia + Communication</h1>
+            </div>
         </div>
     </section>
     <!-- introduction -->
