--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="front-square">
             <div class="layout">
                 <h1 class="big-title">Design. Create. Develop. Multimedia + Communication</h1>
+                <h3><a href="http://cilliya.com/kea/pimp/curriculum/img/test-document.pdf">Test Document</a></h3>
             </div>
         </div>
     </section>
