--- a/index.html
+++ b/index.html
@@ -496,6 +496,8 @@
         <div class="icons">
             <img src="img/black-white-social-media.png">
         </div>
+
+        <div class="logo-front-footer"></div>
     </footer>
 
     <script src="js/main.js"></script>
