fixed some bugs

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <label for="toggle">&#9776;</label>
     <input type="checkbox" id="toggle">
 
-    <nav class="local-nav">
-        <a href="#" class="nav-title">MMD</a>
+    <nav id="local-nav" class="local-nav">
+        <a href="#" id="title-nav" class="nav-title">MMD</a>
         <a href="#" id="intro-nav">Introduction</a>
         <a href="#" id="program-nav">Study Program</a>
         <a href="#" id="student-nav">Student Life</a>
@@ -66,7 +66,7 @@
 
     <!-- study program -->
     <section id="program" class="study-program hide">
-        <div class="cores">
+       
 
             <div class="layout">
                 <h1>Study Program</h1>
@@ -145,7 +145,7 @@
     <!-- mmd-production 1 -->
     <div id="mmd1" class="modal hide">
         <aside class="modal-content">
-            <h2 class="modal-title">Multimedia Production 1 <span class="ects-points">30 ECTS</span></h2>
+            <h2 class="modal-title">Multimedia Production 1 </h2>
             <span id="close-mmd1" class="close"></span>
             <ul class="list-points">
                 <li>Business: 5 ECTS</li>
@@ -162,7 +162,7 @@
     <!-- mmd-production 2 -->
     <div id="mmd2" class="modal hide">
         <aside class="modal-content">
-            <h2 class="modal-title">Multimedia Production 2 <span class="ects-points">30 ECTS</span></h2>
+            <h2 class="modal-title">Multimedia Production 2 </h2>
             <span id="close-mmd2" class="close"></span>
             <ul class="list-points">
                 <li>Business: 5 ECTS</li>
@@ -179,7 +179,7 @@
     <!-- mdd production 3 -->
     <div id="mmd3" class="modal hide">
         <aside class="modal-content">
-            <h2 class="modal-title">Multimedia Production 3 <span class="ects-points">20 ECTS</span></h2>
+            <h2 class="modal-title">Multimedia Production 3 </h2>
             <span id="close-mmd3" class="close"></span>
             <ul class="list-points">
                 <li>Business: 5 ECTS</li>
@@ -196,7 +196,7 @@
     <!-- electives -->
     <div id="elect" class="modal hide">
         <aside class="modal-content">
-            <h2 class="modal-title">Electives <span class="ects-points">10 ECTS</span></h2>
+            <h2 class="modal-title">Electives </h2>
             <span id="close-elect" class="close"></span>
             <p class="description">
                 You you will be able to select one of several elective courses where you can specialise further in UX, UI or frontend development. Electives are developed on an ongoing basis with regard to relevance and demand
@@ -207,7 +207,7 @@
     <!-- internship-->
     <div id="intern" class="modal hide">
         <aside class="modal-content">
-            <h2 class="modal-title">Internship<span class="ects-points">10 ECTS</span></h2>
+            <h2 class="modal-title">Internship</h2>
             <span id="close-intern" class="close"></span>
             <ul class="list-internship">
                 <span class="list-title">There are 5 different types of internships:</span>
@@ -226,7 +226,7 @@
     <!-- final exam-->
     <div id="final" class="modal hide">
         <aside class="modal-content">
-            <h2 class="modal-title"> Final Exam <span class="ects-points">15 ECTS</span></h2>
+            <h2 class="modal-title"> Final Exam </h2>
             <span id="close-final" class="close"></span>
             <p class="description">
                 For the final examination you will write a paper and create a digital product within the scope of the programme. The objective of the final exam project is to document whether the student has acquired the qualifications needed to combine theoretical, methodological and practical elements and to communicate these.
