fixed contact input

--- a/index.html
+++ b/index.html
@@ -469,9 +469,8 @@
             <p>You are more than welcome to come to our <b>OPEN HOUSE</b> which will happen on 28 Febuary 12 p.m - 6 p.m.<a href="http://keaconnect.dk/en/"> Click here</a> for more information.</p>
 
             <div class="email">
-                E-mail:
-                <input type="email" />
-                <p><textarea name="comments" cols="50" rows="10">Message
+                <input type="email" class="input-mail" placeholder="e-mail"/>
+                <p><textarea name="comments" cols="50" rows="10">Write a message
             </textarea></p>
                 <input type="submit" />
             </div>
